AX-23486 - add required properties to /course POST

--- a/api-reference-8-sept.yaml
+++ b/api-reference-8-sept.yaml
@@ -1464,6 +1464,7 @@ paths:
           multipart/form-data:
             schema:
               type: object
+              required: [programCode, program]
               properties:
                 programCode:
                   description: Program Code for new Workshop Type instance
