AX-23486 - add required query params

--- a/api-reference-8-sept.yaml
+++ b/api-reference-8-sept.yaml
@@ -1657,12 +1657,14 @@ paths:
           schema:
             type: integer
             example: 368
+          required: true
         - name: type
           in: query
           schema:
             type: string
             enum: [w, p, el]
             example: p
+          required: true
       responses:
         '200':
           description: |
