Add discriminator to oneOf for course detail endpoint

--- a/api-reference-8-sept.yaml
+++ b/api-reference-8-sept.yaml
@@ -1681,6 +1681,8 @@ paths:
                   - $ref: '#/components/schemas/CourseDetailWorkshop'
                   - $ref: '#/components/schemas/CourseDetailElearning'
                   - $ref: '#/components/schemas/CourseDetailQualification'
+                discriminator:
+                  propertyName: type
   /venues:
     post:
       tags:
